add perfect clear success

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     "        for i in range(0,len(stuff),14):\n",
     "            haha1 = stuff[i+9].contents[0]\n",
     "            haha2 = stuff[i+11].contents[0]\n",
-    "            combo = str(stuff[i+8].contents[0]).strip()\n",
+    "            combo = \"\\\"\" + str(stuff[i+8].contents[0]).strip() + \"\\\",\"\n",
     "            if haha1.find(u'\\u2713') > 0:\n",
     "                results[\"setup1\"].append(combo)\n",
     "            if haha2.find(u'\\u2713') > 0:\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,13 +82,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('setup2.txt','w') as f:\n",
+    "with open('./solutions/setup2.txt','w') as f:\n",
     "    f.write('\\n'.join(ofk['setup2']))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
